# googleScrapy

./: .gitignore  LICENSE  README.md  setup.cfg
src/googleScrapy/: __init__.py  __main__.py
src/googleScrapy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_google_serp_search.py
