[metadata]
name = googleScrapy
version = 0.0.1
author = Ajay Panthagani
author_email = ajaypanthagani321@gmail.com
description = This is a simple package to scrape google search results
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajaypanthagani/googleScrapy
project_urls =
    Bug Tracker = https://github.com/pypa/googleScrapy/issues
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
install_requires = 
    requests
    urllib3
    beautifulsoup4
python_requires = >=3.6

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.packages.find]
where = src